--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 walkdir = "2.3"
 image = "0.24"
 rayon = "1.7"
+imageproc = "0.23"
 clap = { version = "4.3", features = ["derive"] }
